--- a/app.yaml
+++ b/app.yaml
@@ -1,41 +1,12 @@
-application: pfu-experiment
-version: 1
-runtime: python27
-api_version: 1
-threadsafe: true
+runtime: python311
+entrypoint: gunicorn -b :$PORT main:app
 
 handlers:
 - url: /static
   static_dir: static
 
-- url: /js
-  static_dir: static/js
-
-- url: /css
-  static_dir: static/css
-
-- url: /images
-  static_dir: static/images
-
-- url: /session_generator/
-  script: main.app
-  login: admin
-
-- url: /admin/.*
-  script: main.app
-
-- url: /favicon\.ico
-  static_files: static/images/favicon.ico
-  upload: static/images/favicon\.ico
-
 - url: /.*
-  script: main.app
+  script: auto
 
-
-libraries:
-- name: webapp2
-  version: latest
-- name: jinja2
-  version: latest
-- name: numpy
-  version: "1.6.1"
+env_variables:
+  FLASK_ENV: 'production'
